[workspace]
members = ["auth"
,"jsonrpc"
,"chain"
,"consensus/tdmint"
,"consensus/txpool"
,"consensus/raft"
,"consensus/authority_round"
,"network"
,"tools/create_key_addr"
,"tools/monitor"
,"tests/trans_evm"
,"tests/chain_performance"
,"tests/amqp"
,"tests/latency"
,"tests/jsonrpc_performance"
,"tests/benchmark_ws"
,"share_libs/rust-sgx-sdk/samplecode/hello-rust/app"
,"share_libs/rust-sgx-sdk/samplecode/hello-rust/enclave"
,"chain/core/src/private/enclave"
]


