[package]
name = "enclave"
version = "0.9.1"
authors = ["Baidu"]

[lib]
name = "enclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
sgx_types = { path = "../../../../../share_libs/rust-sgx-sdk/sgx_types" }
sgx_tstd = { path = "../../../../../share_libs/rust-sgx-sdk/sgx_tstd" }
